[project]
name = "llm-bin-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "langchain-postgres>=0.0.15",
    "langgraph>=0.6.6",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "psycopg-binary>=3.2.9",
    "psycopg2>=2.9.10",
    "pymupdf>=1.26.4",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "camelot-py[cv]>=0.11",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "oracledb>=3.3.0",
]
